feat!: release thread platform v4
